--- a/Views/Department/Index.cshtml
+++ b/Views/Department/Index.cshtml
@@ -9,6 +9,7 @@
 			<tr>
 				<th scope="col">ID</th>
 				<th scope="col">Name</th>
+				<th scope="col">Adress</th>
 				<th scope="col">Show employees</th>
 				<th scope="col">Action</th>
 			</tr>
@@ -19,6 +20,7 @@
 					<tr>
 					  <th scope="row">@item.Id</th>
 					  <td>@item.Name</td>
+					  <td>@item.Adress</td>
 					  <td>
 						  <a class="btn btn-warning" asp-action="Show">Show</a>
 					  </td>
