Edit department layout

--- a/Views/Department/Create.cshtml
+++ b/Views/Department/Create.cshtml
@@ -9,6 +9,8 @@
 		<input type="text" asp-for="Name" class="form-control" />
 		<label class="form-label" asp-for="Adress">Adress:</label>
 		<input type="text" asp-for="Adress" class="form-control" />
+		<label class="form-label" asp-for="City">City:</label>
+		<input type="text" asp-for="City" class="form-control" />
 	</div>
 	<button type="submit" class="btn btn-warning my-2">Create</button>
 	<button type="reset" class="btn btn-danger my-2">Reset</button>
