--- a/Views/Department/Index.cshtml
+++ b/Views/Department/Index.cshtml
@@ -10,6 +10,7 @@
 				<th scope="col">ID</th>
 				<th scope="col">Name</th>
 				<th scope="col">Adress</th>
+				<th scope="col">City</th>
 				<th scope="col">Show employees</th>
 				<th scope="col">Action</th>
 			</tr>
@@ -21,6 +22,7 @@
 					  <th scope="row">@item.Id</th>
 					  <td>@item.Name</td>
 					  <td>@item.Adress</td>
+					  <td>@item.City</td>
 					  <td>
 						  <a class="btn btn-warning" asp-action="Show">Show</a>
 					  </td>
