--- a/Views/Employee/Index.cshtml
+++ b/Views/Employee/Index.cshtml
@@ -10,6 +10,7 @@
 				<th scope="col">ID</th>
 				<th scope="col">First name</th>
 				<th scope="col">Last Name</th>
+				<th scope="col">Hourly rate</th>
 				<th scope="col">Department</th>
 				<th scope="col">Show attenance</th>
 				<th scope="col">Action</th>
@@ -22,7 +23,8 @@
 					<th scope="row">@item.Id</th>
 				    <td>@item.FirsName</td>
 				    <td>@item.LastName</td>
-					<td>@item.Department</td>
+					<td>@item.HourlyRate</td>
+					<td>@item.Department?.Name</td>
 					<td>
 						<a class="btn btn-warning" asp-action="Show">Show</a>
 					</td>
