--- a/Views/Department/Index.cshtml
+++ b/Views/Department/Index.cshtml
@@ -24,7 +24,7 @@
 					  <td>@item.Adress</td>
 					  <td>@item.City</td>
 					  <td>
-						  <a class="btn btn-warning" asp-action="Show">Show</a>
+						  <a class="btn btn-warning" asp-action="Employees" asp-route-id="@item.Id">Show</a>
 					  </td>
 					  <td>
 						  <div class="d-flex align-items-center justify-content-center gap-2">
