--- a/Views/Employee/Index.cshtml
+++ b/Views/Employee/Index.cshtml
@@ -26,7 +26,7 @@
 					<td>@item.HourlyRate</td>
 					<td>@item.Department?.Name</td>
 					<td>
-						<a class="btn btn-warning" asp-action="Show">Show</a>
+						<a class="btn btn-warning" asp-controller="Calendary" asp-action="Index">Show</a>
 					</td>
 					<td>
 						<div class="d-flex align-items-center justify-content-center gap-2">
