--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -18,7 +18,9 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background: linear-gradient(to top right, #ffffff, #eaeaea, #dcdcdc);
+    background-attachment: fixed;
 }
 th, td {
     white-space: nowrap;
