--- a/Views/AttenanceRecord/Index.cshtml
+++ b/Views/AttenanceRecord/Index.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="container">
+﻿@using AttenanceSystemApp.ViewModels
+@model AttenanceRecordViewModel
+
+<div class="container">
 	<h1 class="text-center my-5">Attenance record</h1>
     <div class="border border-1 border-dark p-3 att-card mb-4">
         <form method="post" asp-action="SelectEmployee">
@@ -7,7 +10,10 @@
                         <div class="mb-3">
                             <label for="DepartmentId" class="mb-2">Department:</label>
                             <select id="DepartmentId" name="DepartmentId" class="form-select">
-                            <!-- Naplníš oddělení -->
+                                @foreach (var dept in Model.Departments)
+                                {
+                                    <option value="@dept.Id">@dept.Name</option>
+                                }
                             </select>
                         </div>
                     </div>
