--- a/Views/AttenanceRecord/Index.cshtml
+++ b/Views/AttenanceRecord/Index.cshtml
@@ -3,6 +3,18 @@
 
 <div class="container">
     <h1 class="text-center my-5">Attenance record</h1>
+    @if(TempData["SuccessMessage"] != null)
+    {
+            <div class="alert alert-success text-center mb-4">
+                @TempData["SuccessMessage"]
+            </div>
+    }
+    @if (TempData["ErrorMessage"] != null)
+    {
+                    <div class="alert alert-danger text-center mb-4">
+                    @TempData["ErrorMessage"]
+                </div>
+    }
     @if (Model.EmployeeId > 0)
     {
         var selectedEmp = Model.Employees.FirstOrDefault(e => e.Id == Model.EmployeeId);
@@ -56,17 +68,17 @@
                 <div class="border border-1 border-dark p-3 att-card">
                     <h4 class="text-center mt-2">Attenance</h4>
                     <div class="my-4 border border-dark border-1 p-3 text-center" style="border-radius: 40px; background-color: #9fcab2; max-width: 100%; overflow: hidden;">
-                        <form method="post" asp-action="RecordAttendance">
+                        <form method="post" asp-action="RecordAttenance">
                             <div class="d-flex flex-row gap-2 w-100">
                                 <div class="flex-fill">
-                                    <form method="post" asp-action="RecordAttendance" style="margin: 0; width: 100%; display: flex;">
+                                    <form method="post" asp-action="RecordAttenance" style="margin: 0; width: 100%; display: flex;">
                                         <input type="hidden" name="EmployeeId" value="@Model.EmployeeId" />
                                         <input type="hidden" name="AttenanceType" value="AttenanceIn" />
                                         <button class="btn btn-warning w-100" style="border-radius: 20px; height: 42px;">Check-In</button>
                                     </form>
                                 </div>
                                 <div class="flex-fill">
-                                    <form method="post" asp-action="RecordAttendance" style="margin: 0; width: 100%; display: flex;">
+                                    <form method="post" asp-action="RecordAttenance" style="margin: 0; width: 100%; display: flex;">
                                         <input type="hidden" name="EmployeeId" value="@Model.EmployeeId" />
                                         <input type="hidden" name="AttenanceType" value="AttenanceOut" />
                                         <button class="btn btn-danger w-100" style="border-radius: 20px; height: 42px;">Check-Out</>
@@ -81,17 +93,17 @@
                 <div class="border border-1 border-dark p-3 att-card">
                     <h4 class="text-center mt-2">Doctor</h4>
                     <div class="my-4 border border-dark border-1 p-3 text-center" style="border-radius: 40px; background-color: #9fcab2; max-width: 100%; overflow: hidden;">
-                        <form method="post" asp-action="RecordAttendance">
+                        <form method="post" asp-action="RecordAttenance">
                             <div class="d-flex flex-row gap-2 w-100">
                                 <div class="flex-fill">
-                                    <form method="post" asp-action="RecordAttendance" style="margin: 0; width: 100%; display: flex;">
+                                    <form method="post" asp-action="RecordAttenance" style="margin: 0; width: 100%; display: flex;">
                                         <input type="hidden" name="EmployeeId" value="@Model.EmployeeId" />
                                         <input type="hidden" name="AttenanceType" value="DoctorIn" />
                                         <button class="btn btn-warning w-100" style="border-radius: 20px; height: 42px;">Check-In</button>
                                     </form>
                                 </div>
                                 <div class="flex-fill">
-                                    <form method="post" asp-action="RecordAttendance" style="margin: 0; width: 100%; display: flex;">
+                                    <form method="post" asp-action="RecordAttenance" style="margin: 0; width: 100%; display: flex;">
                                         <input type="hidden" name="EmployeeId" value="@Model.EmployeeId" />
                                         <input type="hidden" name="AttenanceType" value="DoctorOut" />
                                         <button class="btn btn-danger w-100" style="border-radius: 20px; height: 42px;">Check-Out</button>
@@ -106,17 +118,17 @@
                 <div class="border border-1 border-dark p-3 att-card">
                     <h4 class="text-center mt-2">Vacation</h4>
                     <div class="my-4 border border-dark border-1 p-3 text-center" style="border-radius: 40px; background-color: #9fcab2; max-width: 100%; overflow: hidden;">
-                        <form method="post" asp-action="RecordAttendance">
+                        <form method="post" asp-action="RecordAttenance">
                             <div class="d-flex flex-row gap-2 w-100">
                                 <div class="flex-fill">
-                                    <form method="post" asp-action="RecordAttendance" style="margin: 0; width: 100%; display: flex;">
+                                    <form method="post" asp-action="RecordAttenance" style="margin: 0; width: 100%; display: flex;">
                                         <input type="hidden" name="EmployeeId" value="@Model.EmployeeId" />
                                         <input type="hidden" name="AttenanceType" value="IsVacationOn" />
                                         <button class="btn btn-warning w-100" style="border-radius: 20px; height: 42px;">Check-In</button>
                                     </form>
                                 </div>
                                 <div class="flex-fill">
-                                    <form method="post" asp-action="RecordAttendance" style="margin: 0; width: 100%; display: flex;">
+                                    <form method="post" asp-action="RecordAttenance" style="margin: 0; width: 100%; display: flex;">
                                         <input type="hidden" name="EmployeeId" value="@Model.EmployeeId" />
                                         <input type="hidden" name="AttenanceType" value="IsVacationOff" />
                                         <button class="btn btn-danger w-100" style="border-radius: 20px; height: 42px;">Check-Out</button>
@@ -133,7 +145,7 @@
                     <div class="my-4 border border-dark border-1 p-3 text-center" style="border-radius: 40px; background-color: #9fcab2; max-width: 100%; overflow: hidden;">
                             <div class="d-flex flex-row gap-2 w-100">
                                 <div class="flex-fill">
-                                    <form method="post" asp-action="RecordAttendance" style="margin: 0; width: 100%; display: flex;">
+                                    <form method="post" asp-action="RecordAttenance" style="margin: 0; width: 100%; display: flex;">
                                         <input type="hidden" name="EmployeeId" value="@Model.EmployeeId" />
                                         <input type="hidden" name="AttenanceType" value="IsSickLeaveOn" />
                                         <button type="submit"
@@ -144,7 +156,7 @@
                                     </form>
                                 </div>  
                                 <div class="flex-fill">
-                                    <form method="post" asp-action="RecordAttendance" style="margin: 0; width: 100%; display: flex;">
+                                    <form method="post" asp-action="RecordAttenance" style="margin: 0; width: 100%; display: flex;">
                                         <input type="hidden" name="EmployeeId" value="@Model.EmployeeId" />
                                         <input type="hidden" name="AttenanceType" value="IsSickLeaveOff" />
                                         <button type="submit"
