--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" 
-                            asp-controller="AttenanceRecord" asp-action="Index">AttenanceRecord</a>
+                            asp-controller="AttenanceRecord" asp-action="Index">Record</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Calendary" asp-action="Index">Calendar</a>
