--- a/Views/Calendary/ForOneEmployee.cshtml
+++ b/Views/Calendary/ForOneEmployee.cshtml
@@ -1,9 +1,15 @@
 ﻿@model AttenanceSystemApp.ViewModels.CalendarWithAttenanceViewModel
 
 <div class="container text-center">
-    <h1 class="my-5">Calendar of attenance</h1>
+    <h1 class="my-5">Attendance Calendar</h1>
 
-    <form asp-controller="Calendary" asp-action="GetCalendarWithAttendance" method="get" class="row justify-content-center mb-4">
+    <form asp-controller="Calendary"
+          asp-action="GetOneEmployeeAttenance"
+          method="get"
+          class="row justify-content-center mb-4">
+
+        <input type="hidden" name="employeeId" value="@Model.EmployeeId" />
+
         <div class="col-md-2">
             <label for="year" class="form-label">Year</label>
             <select id="year" name="year" class="form-select">
@@ -13,6 +19,7 @@
                 }
             </select>
         </div>
+
         <div class="col-md-2">
             <label for="month" class="form-label">Month</label>
             <select id="month" name="month" class="form-select">
@@ -23,18 +30,18 @@
                 }
             </select>
         </div>
+
         <div class="col-md-2 d-flex align-items-end">
             <button type="submit" class="btn btn-warning w-100">Zobrazit</button>
         </div>
     </form>
-
+    
     <div class="table-responsive">
         <table class="table table-success table-striped">
             <thead>
                 <tr>
                     <th>Date</th>
                     <th>Day</th>
-                    <th>Employee</th>
                     <th colspan="2">Attendance</th>
                     <th colspan="2">Doctor</th>
                     <th>Vacation</th>
@@ -43,7 +50,6 @@
                 </tr>
                 <tr>
                     <th colspan="2"></th>
-                    <th></th>
                     <th>In</th>
                     <th>Out</th>
                     <th>In</th>
@@ -56,35 +62,25 @@
             <tbody>
                 @if (Model.CalendarDays.Any())
                 {
-                    foreach (var group in Model.CalendarDays.GroupBy(x => x.Date.Date).OrderBy(x => x.Key))
+                    foreach (var record in Model.CalendarDays.OrderBy(x => x.Date))
                     {
-                                <tr class="table-secondary">
-                                    <td>@group.Key.ToString("dd. MM.")</td>
-                                    <td>@group.Key.ToString("dddd")</td>
-                                    <td colspan="8"></td>
+                                <tr>
+                                    <td>@record.Date.ToString("dd. MM.")</td>
+                                    <td>@record.Date.ToString("dddd")</td>
+                                    <td>@record.AttenanceIn</td>
+                                    <td>@record.AttenanceOut</td>
+                                    <td>@record.DoctorIn</td>
+                                    <td>@record.DoctorOut</td>
+                                    <td>@(record.IsVacation ? "YES" : "NO")</td>
+                                    <td>@(record.IsSickLeave ? "YES" : "NO")</td>
+                                    <td></td>
                                 </tr>
-
-                        foreach (var record in group)
-                        {
-                                        <tr>
-                                            <td></td>
-                                            <td></td>
-                                            <td>@record.EmployeeName</td>
-                                            <td>@record.AttenanceIn</td>
-                                            <td>@record.AttenanceOut</td>
-                                            <td>@record.DoctorIn</td>
-                                            <td>@record.DoctorOut</td>
-                                            <td>@(record.IsVacation ? "YES" : "NO")</td>
-                                            <td>@(record.IsSickLeave ? "YES" : "NO")</td>
-                                            <td></td> <!-- Worked hours can be calculated later -->
-                                        </tr>
-                        }
                     }
                 }
                 else
                 {
                         <tr>
-                            <td colspan="10">No attendance data found.</td>
+                            <td colspan="9">No attendance data found.</td>
                         </tr>
                 }
             </tbody>
